--- a/todo/src/css/header.module.css
+++ b/todo/src/css/header.module.css
@@ -1,5 +1,5 @@
 .header{
-    background-color: yellow;
+    background-color: white;
     text-align: center;
     font-weight: bold;
     height: 50px;
